opam-version: "1.2"
name:         "type-beat"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/oklm-wsh/TypeBeat"
bug-reports:  "https://github.com/oklm-wsh/TypeBeat/issues"
dev-repo:     "https://github.com/oklm-wsh/TypeBeat.git"
doc:          "https://oklm-wsh.github.io/TypeBeat/"
license:      "MIT"

build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build & >="1.0+beta9"}
  "angstrom" {>= "0.6.0"}
  "alcotest" {test}
]

available: [ocaml-version >= "4.03.0"]
