opam-version: "1.2"
name:         "typebeat"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/typebeat"
bug-reports:  "https://github.com/mirage/typebeat/issues"
dev-repo:     "https://github.com/mirage/typebeat.git"
doc:          "https://mirage.github.io/typebeat/"
license:      "MIT"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "dune" {>= "1.0"}
  "angstrom" {>= "0.9.0"}
  "alcotest" {test}
]

available: [ocaml-version >= "4.03.0"]
